<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Product Name and Price input -->
    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/productPriceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/product_price_hint"
            android:inputType="numberDecimal" />

        <!-- Postfix "шт" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <!-- Scanner Button -->
    <Button
        android:id="@+id/scannerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanner_button_text" />

    <!-- Add Button -->
    <Button
        android:id="@+id/addProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_button_text"
        android:enabled="false"
        android:background="?attr/colorControlNormal"
        android:textColor="?android:textColorPrimary" />

    <!-- Total Price -->
    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price_text"
        android:textSize="18sp"
        android:paddingTop="16dp"/>

    <!-- Product List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"/>

</LinearLayout>